Modify indie web article

--- a/source/_posts/2014-07-30-indieweb.markdown
+++ b/source/_posts/2014-07-30-indieweb.markdown
@@ -1,12 +1,17 @@
 ---
 layout: post
-title: "Moving to Indie web"
+title: "Moving to Indie Web"
 date: 2014-07-30 18:02
 comments: true
 categories: [IndieWeb]
 ---
 
-After [searching](https://github.com/pierreozoux/ideas) [a long time](http://pierre.oz.free.fr/) on how to build/install/join a federated social web, I found the Graal. Lately,
-I met Michiel B. de Jong, and he convinced me to switch to [Indie web](http://indiewebify.me/)! I'll write posts on how to do it with octopress!
+After [searching](https://github.com/pierreozoux/ideas) [a long time](http://pierre.oz.free.fr/) on how to 
+build/install/join a federated social web, I found the Graal. Lately, I met Michiel B. de Jong, and 
+[he convinced](https://michielbdejong.com/blog/8.html) me to switch to 
+[Indie web](http://indiewebify.me/)! I'll write posts on how I'm doing it!
+
+My idea right now is to use Octopress, hosted by GitHub pages. I plan to use [webmention.io](http://webmention.io/) and 
+[brid.gy](https://www.brid.gy/)
 
 I hope you'll enjoy, and please let me know if you have questions or want to know more!
